--- a/.github/workflows/windows-installer.yml
+++ b/.github/workflows/windows-installer.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 插入這個步驟：注入 Token 權限
+      - name: Setup Git Credentials
+        run: |
+          git config --global url."https://${{ secrets.MY_GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
+        shell: bash
+
       - name: Configure (Release)
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 
@@ -21,11 +27,12 @@ jobs:
         run: cmake --build build --config Release
 
       - name: Package (NSIS)
+        # 注意：Windows 虛擬機通常預裝有 NSIS，若失敗可能需要額外安裝步驟
         working-directory: build
         run: cpack -G NSIS -C Release
 
       - name: Upload Installer
         uses: actions/upload-artifact@v4
         with:
-          name: MyuEngine-Installer
+          name: MyuEngine-Windows-Installer
           path: build/*.exe
