--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,23 +172,10 @@ if(WIN32)
     )
     set(CPACK_NSIS_COMPONENT_INSTALL ON)
     set(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\MyuEngine.exe")
-    # Maintenance mode: detect previous install, offer Repair / Uninstall / Cancel
-    # Use CMake bracket argument [==[ ... ]==] so content is passed verbatim
-    # to the .nsi file without any CMake escape processing.
-    set(CPACK_NSIS_EXTRA_PREINSTALL_COMMANDS [==[
-ReadRegStr $0 HKCU "Software\MyuEngine" "InstallDir"
-StrCmp $0 "" done_maint
-MessageBox MB_YESNOCANCEL|MB_ICONQUESTION "MyuEngine is already installed at $0.$\r$\nYes = Repair / Reinstall$\nNo = Uninstall$\nCancel = Abort" IDYES do_repair IDNO do_uninstall
-Abort
-do_uninstall:
-ExecWait "$\"$0\uninstall.exe$\" /S"
-Goto done_maint
-do_repair:
-StrCpy $INSTDIR $0
-done_maint:
-]==])
-    set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "WriteRegStr HKCU \"Software\\MyuEngine\" \"InstallDir\" \"$INSTDIR\"\nWriteRegStr HKCU \"Software\\MyuEngine\" \"Version\" \"${PROJECT_VERSION}\"")
-    set(CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "DeleteRegKey HKCU \"Software\\MyuEngine\"")
+    # NSIS commands that reference $ variables (like $INSTDIR, $SMPROGRAMS)
+    # are set in cmake/CPackOptions.cmake which is loaded by cpack directly,
+    # avoiding the double-parse escaping problem with CPackConfig.cmake.
+    set(CPACK_PROJECT_CONFIG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/CPackOptions.cmake")
 else()
     set(CPACK_GENERATOR "TGZ")
 endif()
